--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
 			"src/Entry/functions-entry.php",
 			"src/Site/functions-site.php",
 			"src/Template/functions-template.php",
-			"src/View/functions-view.php"
+			"src/View/functions-view.php",
+            "src/functions-filters.php"
 		]
     },
     "require": {
