--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,6 @@
 		}
     },
     "require": {
-        "php": ">=7.3.24",
-        "benlumia007/backdrop": "v3.0.0.x-dev"
+        "php": ">=7.3.24"
     }
 }
