--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,13 @@
           "Benlumia007\\Backdrop\\": "src/"
 		},
 		"files": [
-			"src/Customize/Helpers/functions-helpers.php"
+			"src/Customize/Helpers/functions-helpers.php",
+			"src/Theme/Entry/functions-entry.php",
+			"src/Theme/Menu/functions-menu.php",
+			"src/Theme/Sidebar/functions-sidebar.php",
+			"src/Theme/Site/functions-site.php",
+			"src/Theme/functions-filter.php",
+			"/src/Theme/functions-setup.php"
 		]
     },
     "require": {
