--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
 		},
 		"files": [
 			"src/Customize/Helpers/functions-helpers.php",
+            "src/Mix/functions-mix.php",
             "src/Template/functions-helpers.php",
 			"src/Theme/Entry/functions-entry.php",
 			"src/Theme/Menu/functions-menu.php",
