--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,12 @@
 		}
     },
     "require": {
-        "php": ">=7.3.24",
-		"benlumia007/backdrop-proxies": "v1.0.0.x-dev",
-		"benlumia007/backdrop-support": "v1.0.0.x-dev"
+        "php": ">=7.3.24"
     },
 	"require-dev": {
 		"benlumia007/backdrop-container": "v1.0.0.x-dev",
-		"benlumia007/backdrop-contracts": "v1.0.0.x-dev"
+		"benlumia007/backdrop-contracts": "v1.0.0.x-dev",
+		"benlumia007/backdrop-proxies": "v1.0.0.x-dev",
+		"benlumia007/backdrop-support": "v1.0.0.x-dev"
 	}
 }
