--- a/composer.json
+++ b/composer.json
@@ -25,5 +25,6 @@
         "benlumia007/backdrop-contracts": "v1.0.0.x-dev",
 		"benlumia007/backdrop-proxies": "v1.0.0.x-dev",
 		"benlumia007/backdrop-support": "v1.0.0.x-dev"
-    }
+    },
+	"minimum-stability": "dev"
 }
