--- a/composer.json
+++ b/composer.json
@@ -26,5 +26,5 @@
 		"benlumia007/backdrop-proxies": "v1.0.0.x-dev",
 		"benlumia007/backdrop-support": "v1.0.0.x-dev"
     },
-	"minimum-stability": "dev"
+	"minimum-stability": "stable"
 }
