--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,9 @@
     },
     "require": {
         "php": ">=7.3.24",
-		"benlumia007/backdrop-container": "v1.0.0.x-dev",
-        "benlumia007/backdrop-contracts": "v1.0.0.x-dev",
-		"benlumia007/backdrop-proxies": "v1.0.0.x-dev",
-		"benlumia007/backdrop-support": "v1.0.0.x-dev"
+		"benlumia007/backdrop-container": "^1.0.0",
+        "benlumia007/backdrop-contracts": "^1.0.0",
+		"benlumia007/backdrop-proxies": "^1.0.0",
+		"benlumia007/backdrop-support": "^1.0.0"
     }
 }
