--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
 		}
     },
     "require": {
-        "php": ">=7.4"
+        "php": ">=7.4",
+        "benlumia007/backdrop-contracts": "^1.0.0"
     },
     "minimum-stability": "dev",
 	"prefer-stable": true
