--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
 		},
         "files": [
 			"src/Helpers/functions-helpers.php",
+			"src/Mix/Manifest/functions-helpers.php",
             "src/functions-helpers.php"
         ]
     },
