--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
         "files": [
 			"src/Helpers/functions-helpers.php",
 			"src/Mix/Manifest/functions-helpers.php",
+			"src/Theme/Menu/functions-menu.php",
             "src/functions-helpers.php"
         ]
     },
