--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
 			"src/Helpers/functions-helpers.php",
 			"src/Mix/Manifest/functions-helpers.php",
 			"src/Theme/Menu/functions-menu.php",
+			"src/Theme/Sidebar/functions-sidebar.php",
             "src/functions-helpers.php"
         ]
     },
