--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,10 @@
     "autoload": {
         "psr-4": {
           "Backdrop\\": "src/"
-		}
+		},
+		"files": [
+			"src/functions-helpers.php"
+		]
     },
     "require": {
         "php": ">=8.0"
