--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,8 @@
 		},
 		"files": [
 			"src/Template/Helpers/functions-helpers.php",
+			"src/Theme/Menu/functions-menu.php",
+			"src/Theme/Sidebar/functions-sidebar.php",
 			"src/functions-helpers.php"
 		]
     },
