--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
 			"src/Template/Helpers/functions-helpers.php",
 			"src/Theme/Menu/functions-menu.php",
 			"src/Theme/Sidebar/functions-sidebar.php",
-			"src/functions-helpers.php"
+			"src/functions-filters.php",
+			"src/functions-helpers.php",
+			"src/functions-setup.php"
 		]
     },
     "require": {
