--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "benlumia007/backdrop",
+    "name": "backdrop-dev/framework",
     "description": "A core that helps you build amazing themes",
     "keywords": [
         "wordpress"
