remove contracts and use the component instead

--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
 		]
     },
     "require": {
-        "php": ">=7.1"
+        "php": ">=7.1",
+        "backdrop-dev/contracts": "^1.0"
     },
     "minimum-stability": "dev",
 	"prefer-stable": true
