--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     },
     "require": {
         "php": ">=7.1",
-        "backdrop-dev/contracts": "^1.0"
+        "backdrop-dev/contracts": "^1.0.x-dev"
     },
     "minimum-stability": "dev",
 	"prefer-stable": true
